# ChangeLog for app-office/abiword
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/abiword/ChangeLog,v 1.166 2007/01/25 21:46:18 welp Exp $

  25 Jan 2007; Peter Weller <welp@gentoo.org> +files/freebsd_fix.patch,
  abiword-2.4.5-r1.ebuild, abiword-2.4.6.ebuild:
  Moved instances of epatch from src_compile to src_unpack. Added patch to
  -2.4.6 so it works on x86-fbsd

  25 Jan 2007; Marius Mauch <genone@gentoo.org> abiword-2.4.4.ebuild,
  abiword-2.4.5.ebuild, abiword-2.4.5-r1.ebuild, abiword-2.4.6.ebuild:
  Replacing einfo with elog

  04 Jan 2007; Saleem Abdulrasool <compnerd@gentoo.org>
  abiword-2.4.5-r1.ebuild, abiword-2.4.6.ebuild:
  Fix to install icon into correct directory (bug #117371), based on
  suggestion from Chris Mayo <mayo@clara.co.uk>

*abiword-2.4.6 (03 Jan 2007)

  03 Jan 2007; Saleem Abdulrasool <compnerd@gentoo.org>
  +abiword-2.4.6.ebuild:
  Version bump (bug #155528)

*abiword-2.4.5-r1 (12 Dec 2006)

  12 Dec 2006; Saleem Abdulrasool <compnerd@gentoo.org>
  +files/11_history_fullpath.dpatch, +files/16_fcfini_crash.dpatch,
  +abiword-2.4.5-r1.ebuild:
  Add patches from debian to a revbump to fix bug #157804

  15 Oct 2006; Aron Griffis <agriffis@gentoo.org> -abiword-2.2.10.ebuild,
  -abiword-2.4.1.ebuild, -abiword-2.4.2.ebuild, -abiword-2.4.2-r1.ebuild:
  Trim old ebuilds

  15 Oct 2006; Aron Griffis <agriffis@gentoo.org> abiword-2.4.5.ebuild:
  Mark 2.4.5 stable on ia64. #140499

  06 Sep 2006; Thomas Cort <tcort@gentoo.org> abiword-2.4.5.ebuild:
  Stable on alpha wrt Bug #144120.

  21 Aug 2006; Chris Gianelloni <wolf31o2@gentoo.org> abiword-2.4.5.ebuild:
  Stable on amd64 and x86 wrt bug #144120.

  19 Aug 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  abiword-2.4.5.ebuild:
  ppc stable, bug #144120

  17 Aug 2006; Jeroen Roovers <jer@gentoo.org> abiword-2.4.5.ebuild:
  Stable for HPPA (bug #144120).

  16 Aug 2006; Markus Rothe <corsair@gentoo.org> abiword-2.4.5.ebuild: