@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/abiword/abiword-2.4.5.ebuild,v 1.9 2007/01/25 05:10:46 genone Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/abiword/abiword-2.4.5.ebuild,v 1.10 2007/02/02 21:42:05 compnerd Exp $
 
 inherit eutils fdo-mime alternatives
 
@@ -72,7 +72,7 @@ src_install() {
 	rm -f ${D}/usr/bin/abiword
 	dosym AbiWord-2.4 /usr/bin/abiword-2.4
 
-	dodoc *.TXT docs/build/BUILD.TXT user/wp/readme.txt
+	dodoc *.TXT user/wp/readme.txt
 }
 
 pkg_postinst() {
