@@ -1,6 +1,11 @@
 # ChangeLog for app-office/abiword
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/abiword/ChangeLog,v 1.166 2007/01/25 21:46:18 welp Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/abiword/ChangeLog,v 1.167 2007/02/02 21:42:05 compnerd Exp $
+
+  02 Feb 2007; Saleem Abdulrasool <compnerd@gentoo.org>
+  abiword-2.2.11.ebuild, abiword-2.4.4.ebuild, abiword-2.4.5.ebuild,
+  abiword-2.4.5-r1.ebuild, abiword-2.4.6.ebuild:
+  Drop unneeded doc for bug #164971
 
   25 Jan 2007; Peter Weller <welp@gentoo.org> +files/freebsd_fix.patch,
   abiword-2.4.5-r1.ebuild, abiword-2.4.6.ebuild:
